# fibonacci_lattice

./: .gitignore  .pyre_configuration  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  static.yml
docs/: conf.py  index.rst
fiblat/: __init__.py  _cube_lattice.py  _irrational.py  _sphere_lattice.py
tests/: __init__.py  test_cube.py  test_irrational.py  test_sphere.py
typings/numba/: __init__.pyi
typings/pytest_benchmark/: fixture.pyi
