[project]
name = "fiblat"
version = "0.6.0"
description = "A package for generating evenly distributed points on a sphere"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numba>=0.61.0", "numpy>=2.1.3"]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "nbformat>=5.10.4",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.4",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["fiblat", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov fiblat --cov-report term-missing -m 'not long'"
markers = ["long: long benchmarks"]

[tool.uv]
keyring-provider = "subprocess"
